# sky

./: .bazelignore  .editorconfig  .gitignore  .golangci.toml  .golangci.yml  .mcp.json  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  FEATURE_REQUESTS_BUILTINS.md  FEATURE_REQUESTS_TESTING.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  copy.bara.sky  dprint.json  go.mod  go.sum  justfile  lefthook.yml
.agent/queries/: pr-review-threads.graphql  reply-to-thread.graphql  resolve-review-thread.graphql
.agent/rules/: code-quality.md  git-workflow.md
.agent/scripts/: inventory_threads.py  pr.py
.agent/workflows/: review.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  copybara.yml  docs.yml  format-compare.yml  release.yml
cmd/sky/: BUILD.bazel  embedded.go  embedded_full.go  embedded_minimal.go  main.go
cmd/sky-ci/: BUILD.bazel  main.go
cmd/skycheck/: BUILD.bazel  main.go  run.go
cmd/skycov/: BUILD.bazel  main.go  run.go
cmd/skydoc/: BUILD.bazel  main.go  run.go
cmd/skyfmt/: BUILD.bazel  main.go  run.go
cmd/skylint/: BUILD.bazel  main.go  run.go
cmd/skyls/: BUILD.bazel  main.go
cmd/skyquery/: BUILD.bazel  main.go  run.go
cmd/skyrepl/: BUILD.bazel  main.go  run.go
cmd/skytest/: BUILD.bazel  main.go  run.go
docs/: BAZEL.md  HANDOFF-SKYLS.md  IDEAS-ci-integration.md  LSP-IMPROVEMENT-PLAN.md  NOGO.md  NOGO_ANALYZERS.md  PLAN-ci-reporter-plugin.md  PLAN-cst-default-engine-flip.md  PLAN-cst-deps-bump.md  PLAN-cst-library-versioning.md  PLAN-lsp-cst-migration.md  PLAN-lsp-wasm-distribution.md  PLAN-plugin-cli-polish.md  PLAN-semantic-model.md  PLAN-semantic-tokens.md  PLAN-skylint-cst-rules.md  PLUGINS.md  PLUGIN_PROTOCOL.md  RELEASES.md  RESEARCH-semantic-model-survey.md  RFC-custom-dialects.md  RFC-dialect-file-structure.md  RFC-dialect-support.md  RFC-plugin-architecture.md  RFC-virtual-modules.md  ROADMAP.md  SKYQUERY_SPEC.md  STARLARK_GO_X_SPEC.md  TOOLING_BENCHMARK.md  TOOLING_SPECS.md  benchmark-results.md  benchmarking-plan.md  configuration.md  coverage-instrumentation-research.md  coverage.md
docs-website/: HANDOFF.md  astro.config.ts  package.json
docs-website/src/: validate-sidebar.ts
docs/improvements/: 01-filepath-abs-error-handling.md  02-unbuffered-channel-deadlock.md  03-preallocate-suggestions-slice.md  04-cache-compiled-regexp.md  05-remove-dead-assignitem.md  06-tests-internal-ci.md  07-tests-lsp-folding-links.md  08-track-lsp-goroutines.md  09-unify-reporter-interfaces.md  10-plugin-store-caching.md  11-split-lsp-server.md  12-tests-skylint-coverage.md  13-tests-tester-error-paths.md  14-wasm-binary-caching.md  15-resolve-starlark-fork.md  16-shared-test-utilities.md  17-standardize-config-loading.md
docs/rfcs/: RFC-001-open-questions-discussion.md  RFC-001-testing-framework.md
docs/website/: .npmrc  astro.config.ts  package.json  starlark.tmLanguage.json  textproto.tmLanguage.json
editors/code/: .editorconfig  .gitignore  .prettierignore  .vscodeignore  AGENTS.md  README.md  eslint.config.ts  justfile  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/plugins/: README.md
examples/plugins/custom-lint/: BUILD.bazel  README.md  go.mod  main.go
examples/plugins/custom-lint/rules/: BUILD.bazel  max_params.go  no_print.go  no_underscore.go  rules.go  rules_test.go
internal/ci/: BUILD.bazel  ci.go  generic.go  github.go  types.go  write.go
internal/cli/: BUILD.bazel  cli.go  cli_test.go  exitcodes.go  output.go
internal/cmdtest/: BUILD.bazel  cmdtest.go  cmdtest_test.go
internal/cmdtest/testdata/skycheck/: basic.txtar
internal/cmdtest/testdata/skydoc/: basic.txtar
internal/cmdtest/testdata/skyfmt/: basic.txtar
internal/cmdtest/testdata/skylint/: basic.txtar
internal/cmdtest/testdata/skyls/: basic.txtar
internal/cmdtest/testdata/skyquery/: basic.txtar
internal/lsp/: BUILD.bazel  builtins_integration_test.go  codeaction.go  codeaction_test.go  completion_test.go  folding.go  handle_completion.go  handle_definition.go  handle_diagnostics.go  handle_formatting.go  handle_hover.go  handle_symbols.go  handle_textdocument.go  inlayhints.go  inlayhints_integration_test.go  inlayhints_test.go  jsonrpc.go  jsonrpc_test.go  links.go  provider.go  provider_test.go  references.go  references_test.go  rename.go  rename_test.go  semantic.go  semantic_test.go  semantic_types.go  server.go  server_test.go  signature.go  signature_test.go  workspace.go  workspace_test.go
internal/plugins/: BUILD.bazel  install.go  install_test.go  marketplace.go  names.go  protocol.go  runner.go  runner_exec.go  runner_test.go  runner_wasi.go  store.go  store_test.go  types.go  workspace.go  workspace_test.go
internal/protocol/: BUILD.bazel  protocol.go
internal/skyconfig/: BUILD.bazel  config.go  config_test.go  starlark.go  toml.go
internal/starlark/: BUILD.bazel  doc.go
internal/tooldeps/: BUILD.bazel  tools.go
internal/types/: BUILD.bazel  builtins.go  inference.go  inference_test.go  parser.go  parser_test.go  typeref.go  typeref_test.go
internal/version/: BUILD.bazel  version.go  version_test.go
packaging/homebrew/: sky.rb.in
pkg/skyplugin/: BUILD.bazel  doc.go  env.go  metadata.go  output.go  plugin.go
pkg/skyplugin/testing/: BUILD.bazel  capture.go  env.go
sky-action/: README.md  action.yml
sky-action/scripts/: run.sh
tools/benchmark/: README.md  (+2 more)
tools/convert-starpls-json/: BUILD.bazel  main.go
tools/extract-bazel-builtins/: BUILD.bazel  inspect.go  inspect_detailed.go  inspect_source.go  main.go  stats.go
tools/extract-bazel-builtins/inspect/: BUILD.bazel
tools/extract-bazel-builtins/inspect-detailed/: BUILD.bazel
tools/extract-bazel-builtins/inspect-source/: BUILD.bazel
tools/extract-bazel-builtins/show-rule/: BUILD.bazel  main.go
tools/extract-bazel-builtins/source-stats/: BUILD.bazel  main.go
tools/extract-bazel-builtins/stats/: BUILD.bazel
tools/nogo/: BUILD.bazel
tools/release/: BUILD.bazel  main.go
tools/sync-protocol/: BUILD.bazel  README.md  main.go
tools/vendor-grammar/: BUILD.bazel  main.go
(+291 files in other folders)
