"""
Sky - Starlark tooling monorepo.
"""

module(
    name = "sky",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "toolchains_protoc", version = "0.4.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "aspect_rules_lint", version = "2.0.0-beta.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")
go_sdk.nogo(nogo = "//tools/nogo:sky_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# keep sorted
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_gofrs_flock",
    "com_github_google_go_cmp",
    "com_github_kisielk_errcheck",
    "com_github_pmezard_go_difflib",
    "com_github_rogpeppe_go_internal",
    "com_github_tetratelabs_wazero",
    "com_github_timakin_bodyclose",
    "dev_lsp_go_protocol",
    "net_starlark_go",
    "org_golang_google_protobuf",
    "org_golang_x_term",
    "org_golang_x_tools",
)

keep_sorted_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", isolate = True)
keep_sorted_deps.from_file(go_mod = "@aspect_rules_lint//lint/keep-sorted:go.mod")
use_repo(keep_sorted_deps, "com_github_google_keep_sorted")
