load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sky_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/sky",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/plugins",
        "//internal/version",
    ],
)

go_binary(
    name = "sky",
    embed = [":sky_lib"],
    visibility = ["//visibility:public"],
)
