load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Shared sources and dependencies
_COMMON_SRCS = [
    "embedded.go",
    "main.go",
]

_COMMON_DEPS = [
    "//internal/plugins",
    "//internal/version",
]

_EMBEDDED_TOOL_DEPS = [
    "//internal/cmd/skycheck",
    "//internal/cmd/skycov",
    "//internal/cmd/skydoc",
    "//internal/cmd/skyfmt",
    "//internal/cmd/skylint",
    "//internal/cmd/skyquery",
    "//internal/cmd/skyrepl",
    "//internal/cmd/skytest",
]

# Minimal build - no embedded tools
go_library(
    name = "sky_lib",
    srcs = [
        "embedded.go",
        "embedded_minimal.go",
        "main.go",
    ],
    importpath = "github.com/albertocavalcante/sky/cmd/sky",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/plugins",
        "//internal/version",
    ],
)

go_binary(
    name = "sky",
    embed = [":sky_lib"],
    visibility = ["//visibility:public"],
)

# Full build - all tools embedded
go_library(
    name = "sky_full_lib",
    srcs = ["embedded_full.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/sky",
    visibility = ["//visibility:private"],
    deps = _COMMON_DEPS + _EMBEDDED_TOOL_DEPS,
)

go_binary(
    name = "sky_full",
    embed = [":sky_full_lib"],
    visibility = ["//visibility:public"],
)
