load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skycheck_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skycheck",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli"],
)

go_binary(
    name = "skycheck",
    embed = [":skycheck_lib"],
    visibility = ["//visibility:public"],
)
