load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skycov_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skycov",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skycov"],
)

go_binary(
    name = "skycov",
    embed = [":skycov_lib"],
    visibility = ["//visibility:public"],
)
