load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skydoc_lib",
    srcs = [
        "main.go",
        "run.go",
    ],
    importpath = "github.com/albertocavalcante/sky/cmd/skydoc",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/starlark/docgen",
        "//internal/version",
    ],
)

go_binary(
    name = "skydoc",
    embed = [":skydoc_lib"],
    visibility = ["//visibility:public"],
)
