load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skyfmt_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skyfmt",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skyfmt"],
)

go_binary(
    name = "skyfmt",
    embed = [":skyfmt_lib"],
    visibility = ["//visibility:public"],
)
