load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skylint_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skylint",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli"],
)

go_binary(
    name = "skylint",
    embed = [":skylint_lib"],
    visibility = ["//visibility:public"],
)
