load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skylint_lib",
    srcs = [
        "main.go",
        "run.go",
    ],
    importpath = "github.com/albertocavalcante/sky/cmd/skylint",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/starlark/linter",
        "//internal/starlark/linter/buildtools",
        "//internal/version",
    ],
)

go_binary(
    name = "skylint",
    embed = [":skylint_lib"],
    visibility = ["//visibility:public"],
)
