load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "skyls",
    embed = [":skyls_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "skyls_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skyls",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skyls"],
)
