load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skyquery_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skyquery",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skyquery"],
)

go_binary(
    name = "skyquery",
    embed = [":skyquery_lib"],
    visibility = ["//visibility:public"],
)
