load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skyrepl_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skyrepl",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skyrepl"],
)

go_binary(
    name = "skyrepl",
    embed = [":skyrepl_lib"],
    visibility = ["//visibility:public"],
)
