load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "skytest_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/cmd/skytest",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/skytest"],
)

go_binary(
    name = "skytest",
    embed = [":skytest_lib"],
    visibility = ["//visibility:public"],
)
