load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lsp",
    srcs = [
        "codeaction.go",
        "folding.go",
        "jsonrpc.go",
        "links.go",
        "provider.go",
        "references.go",
        "rename.go",
        "semantic.go",
        "semantic_types.go",
        "server.go",
        "signature.go",
        "workspace.go",
    ],
    importpath = "github.com/albertocavalcante/sky/internal/lsp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/starlark/builtins",
        "//internal/starlark/builtins/loader",
        "//internal/starlark/checker",
        "//internal/starlark/classifier",
        "//internal/starlark/docgen",
        "//internal/starlark/filekind",
        "//internal/starlark/formatter",
        "//internal/starlark/linter",
        "//internal/starlark/linter/buildtools",
        "//internal/starlark/query/index",
        "@com_github_bazelbuild_buildtools//build",
        "@dev_lsp_go_protocol//:protocol",
    ],
)

go_test(
    name = "lsp_test",
    srcs = [
        "builtins_integration_test.go",
        "codeaction_test.go",
        "completion_test.go",
        "jsonrpc_test.go",
        "provider_test.go",
        "references_test.go",
        "rename_test.go",
        "semantic_test.go",
        "server_test.go",
        "signature_test.go",
        "workspace_test.go",
    ],
    embed = [":lsp"],
    deps = [
        "//internal/starlark/builtins",
        "//internal/starlark/checker",
        "//internal/starlark/filekind",
        "//internal/starlark/linter",
        "@dev_lsp_go_protocol//:protocol",
        "@net_starlark_go//syntax",
    ],
)
