load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tooldeps",
    srcs = ["tools.go"],
    importpath = "github.com/albertocavalcante/sky/internal/tooldeps",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_kisielk_errcheck//errcheck",
        "@com_github_timakin_bodyclose//passes/bodyclose",
        "@org_golang_x_tools//go/analysis/passes/nilness",
        "@org_golang_x_tools//go/analysis/passes/unusedwrite",
    ],
)
