load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "parser.go",
        "typeref.go",
    ],
    importpath = "github.com/albertocavalcante/sky/internal/types",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "types_test",
    srcs = [
        "parser_test.go",
        "typeref_test.go",
    ],
    embed = [":types"],
)
