load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "skyplugin",
    srcs = [
        "doc.go",
        "env.go",
        "metadata.go",
        "output.go",
        "plugin.go",
    ],
    importpath = "github.com/albertocavalcante/sky/pkg/skyplugin",
    visibility = ["//visibility:public"],
)
