load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "extract-bazel-builtins_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/tools/extract-bazel-builtins",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/starlark/builtins/proto",
        "@com_github_bazelbuild_buildtools//build_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "extract-bazel-builtins",
    embed = [":extract-bazel-builtins_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "inspect",
    srcs = ["inspect.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/starlark/builtins/proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "inspect-source",
    srcs = ["inspect_source.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "inspect-detailed",
    srcs = ["inspect_detailed.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/starlark/builtins/proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "stats",
    srcs = ["stats.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/starlark/builtins/proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "source-stats",
    srcs = ["source_stats.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "show-rule",
    srcs = ["show_rule.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/starlark/builtins/proto",
        "@org_golang_google_protobuf//proto",
    ],
)
