load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vendor-grammar_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/sky/tools/vendor-grammar",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "vendor-grammar",
    embed = [":vendor-grammar_lib"],
    visibility = ["//visibility:public"],
)
